@@ -142,7 +142,13 @@
    <id>printer/HP-LaserJet_1220</id>
   </printer>
   <printer>
+   <id>printer/HP-LaserJet_1300</id>
+  </printer>
+  <printer>
    <id>printer/HP-LaserJet_2200</id>
+  </printer>
+  <printer>
+   <id>printer/HP-LaserJet_2300</id>
   </printer>
   <printer>
    <id>printer/HP-LaserJet_3200m</id>
