@@ -169,7 +169,17 @@
      </constraint>
      <constraint sense="false">
       <make>HP</make>
+      <model>LaserJet 1300</model>
+      <arg_defval>na</arg_defval>
+     </constraint>
+     <constraint sense="false">
+      <make>HP</make>
       <model>LaserJet 2200</model>
+      <arg_defval>na</arg_defval>
+     </constraint>
+     <constraint sense="false">
+      <make>HP</make>
+      <model>LaserJet 2300</model>
       <arg_defval>na</arg_defval>
      </constraint>
      <constraint sense="false">
