@@ -107,7 +107,19 @@
      </constraint>
      <constraint sense="true">
       <make>HP</make>
+      <model>LaserJet 1300</model>
+      <driver>Postscript</driver>
+      <arg_defval>ev/958</arg_defval>
+     </constraint>
+     <constraint sense="true">
+      <make>HP</make>
       <model>LaserJet 2200</model>
+      <driver>Postscript</driver>
+      <arg_defval>ev/958</arg_defval>
+     </constraint>
+     <constraint sense="true">
+      <make>HP</make>
+      <model>LaserJet 2300</model>
       <driver>Postscript</driver>
       <arg_defval>ev/958</arg_defval>
      </constraint>
