@@ -177,7 +177,17 @@
      </constraint>
      <constraint sense="true">
       <make>HP</make>
+      <model>LaserJet 1300</model>
+      <arg_defval>ev/680</arg_defval>
+     </constraint>
+     <constraint sense="true">
+      <make>HP</make>
       <model>LaserJet 2200</model>
+      <arg_defval>ev/680</arg_defval>
+     </constraint>
+     <constraint sense="true">
+      <make>HP</make>
+      <model>LaserJet 2300</model>
       <arg_defval>ev/680</arg_defval>
      </constraint>
      <constraint sense="true">
