@@ -182,12 +182,22 @@
      </constraint>
      <constraint sense="true">
       <make>HP</make>
+      <model>LaserJet 1300</model>
+      <arg_defval>1</arg_defval>
+     </constraint>
+     <constraint sense="true">
+      <make>HP</make>
       <model>LaserJet 1220</model>
       <arg_defval>1</arg_defval>
      </constraint>
      <constraint sense="true">
       <make>HP</make>
       <model>LaserJet 2200</model>
+      <arg_defval>1</arg_defval>
+     </constraint>
+     <constraint sense="true">
+      <make>HP</make>
+      <model>LaserJet 2300</model>
       <arg_defval>1</arg_defval>
      </constraint>
      <constraint sense="true">
