@@ -1,0 +1,51 @@
+<printer id="printer/HP-LaserJet_1300">
+  <make>HP</make>
+  <model>LaserJet 1300</model>
+  <mechanism>
+    <laser/><!--not "color"-->
+    <resolution>
+      <dpi>
+        <x>1200</x>
+        <y>1200</y>
+      </dpi>
+    </resolution>
+    <consumables>
+      <comments>
+        <en>
+
+	Toner and drum in one print cartridge, cartridges for 2500 or
+	4000 pages available
+
+	</en>
+      </comments>
+    </consumables>
+  </mechanism>
+  <url>http://h20022.www2.hp.com/busprod/overview/0,12512,series=238320^type=18972^category=64170,00.html?lsidebarLayId=106&amp;rsidebarLayId=63</url>
+  <lang>
+    <postscript level="2">
+    <!--unknown ppd filename "ppd"--></postscript>
+    <pcl level="6"/>
+    <pjl/>
+    <text>
+      <charset>us-ascii</charset>
+    </text>
+  </lang>
+  <autodetect>
+  </autodetect>
+  <functionality>A</functionality>
+  <driver>Postscript</driver>
+  <!--verified-->
+  <!--no "contrib_url"-->
+  <comments>
+    <en>
+
+    PostScript level 2, PCL 5e, and PCL 6 out of the box, parallel and
+    USB connection, 1300n with ethernet connection, 250-sheet tray
+    built-in, extra 250-sheet tray available.&lt;p&gt;
+
+    Inductive "Instant On" fuser for very fast pre-heating, first page
+    after around 8 seconds.&lt;p&gt;
+
+    </en>
+  </comments>
+</printer>
