@@ -1,0 +1,44 @@
+<printer id="printer/HP-LaserJet_2300">
+  <make>HP</make>
+  <model>LaserJet 2300</model>
+  <mechanism>
+    <laser/><!--not "color"-->
+    <resolution>
+      <dpi>
+        <x>1200</x>
+        <y>1200</y>
+      </dpi>
+    </resolution>
+    <consumables>
+    <!--no comments--><!--one or more "partno" elements.--></consumables>
+  </mechanism>
+  <url>http://h20022.www2.hp.com/busprod/overview/0,12512,series=238800^type=18972^category=64170,00.html?lsidebarLayId=106&rsidebarLayId=63</url>
+  <lang>
+    <postscript level="3">
+    <!--unknown ppd filename "ppd"--></postscript>
+    <pcl level="6"/>
+    <pjl/>
+    <text>
+      <charset>us-ascii</charset>
+    </text>
+  </lang>
+  <autodetect>
+  </autodetect>
+  <functionality>A</functionality>
+  <driver>Postscript</driver>
+  <!--verified-->
+  <!--no "contrib_url"-->
+  <comments>
+    <en>
+
+    PostScript level 3, PCL 5e, and PCL 6 out of the box, parallel and
+    USB connection, "n" models with ethernet connection, 250-sheet
+    tray built-in, extra 250- or 500-sheet tray available (included in
+    "t" models), duplex unit in "d" models.&lt;p&gt;
+
+    The "L" model is software-compatible to the other models, it is
+    only somewhat slower (20 ppm instead of 25 ppm).&lt;p&gt;
+
+    </en>
+  </comments>
+</printer>
