@@ -1,3 +1,11 @@
+2003-05-05  Till Kamppeter <till.kamppeter@gmx.net>
+
+	* printer/HP-LaserJet_1300.xml, printer/HP-LaserJet_2300.xml,
+	  driver/lj5gray.xml, driver/lj5mono.xml, driver/ljet4.xml,
+	  driver/Postscript.xml, driver/pxlmono.xml, opt/127.xml,
+	  opt/160.xml, opt/188.xml, opt/189.xml, opt/87.xml, opt/89.xml,
+	  opt/90.xml, opt/93.xml: Added The HP LaserJet 1300 and 2300.
+
 2003-04-29  Till Kamppeter <till.kamppeter@gmx.net>
 
 	* README, USAGE: Updated for Foomatic 3.0.0 (links to
